@@ -1,6 +1,8 @@
 #ifndef __DNS_H__
 #define __DNS_H__
 
+#include <netinet/in.h>
+
 #include "chain.h"
 
 #ifdef __cplusplus
@@ -14,7 +16,7 @@ void a_Dns_init (void);
 void a_Dns_freeall(void);
 void a_Dns_resolve(const char *hostname, DnsCallback_t cb_func, void *cb_data);
 
-#define DILLO_ADDR_MAX 16
+#define DILLO_ADDR_MAX sizeof(struct in6_addr)
 
 typedef struct _DilloHost
 {
